- When clicking on the recommended building, the page automatically scroll to the building
- The recommended building is highlighted in yellow (more visilibity !)
- (eventually) Fixed AP + CP detection (if you where shaman but not tech, the plugin gave you AP + PM, which was wront !)
- Added Zenoo's script Camping Predict Injector
- Added -SAVVA-'s CalcPA script. It shows ow you use your stuff to do the best expedition
- Improved the escort system (moved some buttons)
- Normalized all manifest.json
- Added an icon to easily see if a citizen can be rescued (if you are hero)
- Updated socket.io

v0.2.3
- Add a default background to the configuration panel
- Added Chatty, a easy to use chat system
- Added Auto sync feature
- Added HLL's citizen note (only for Hordes for now)
- Converted firefox extension to WebExtension system (Firefox 57+)

v0.2.2
- Add Firefox icon
- Add Safari icon
- The configuration panel is no longer a popup
- Conform to Motion Twin EULA

v0.2.1
- Fix bank anti-abuse on stacked objects

v0.2.0
- The RP content is now properly hidden again
- Split the configuration panel in two columns
- Use the native Die2Nite tooltips
- Remove the soul distinctions scrollbar
- Add a bank anti-abuse counter/protection
- Add Dailymotion and Vimeo to the recognized media links
- Split the configuration panel intro more categories
- Add 4 Davf scripts (old forum, old forums tags, old soul, old Twinoid elements)
- Now also take in consideration the number of CP while repairing and
constructing buildings

v0.1.4
- Construction_max_ap now works with repairs
- The media links are now more intelligently replaced
- Show_spoil now works correctly with HTML child elements
- Fix issue with media link just before a spoil
- Add the auto-escort feature
- Add the escort auto good options feature
- Fix a bug making the extension considered you were not outside when at town
gates
- Now cache the session key at each page load
- Remove OEEV sync (RIP)

v0.1.3