@@ -26,7 +26,7 @@
 
     "bbh.fred26.fr",
     "hordes-la-loi.fr",
-    "gest-hordes.meta-roh.com",
+    "gest-hordes.eragaming.fr",
 
     "data.zenoo.fr"
   ],
