@@ -5,11 +5,13 @@ v0.2.4
 - The recommended building is highlighted in yellow (more visilibity !)
 - (eventually) Fixed AP + CP detection (if you where shaman but not tech, the plugin gave you AP + PM, which was wront !)
 - Added Zenoo's script Camping Predict Injector
-- Added -SAVVA-'s CalcPA script. It shows ow you use your stuff to do the best expedition
+- Added -SAVVA-'s CalcPA script. It shows how you use your stuff to do the best expedition
 - Improved the escort system (moved some buttons)
 - Normalized all manifest.json
 - Added an icon to easily see if a citizen can be rescued (if you are hero)
 - Updated socket.io
+- Added a synchro to Gest'Hordes (Hordes.fr only)
+- Added "Death by Despair"
 
 v0.2.3
 - Add a default background to the configuration panel
